build: add libmdbx to cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -131,6 +131,14 @@ if(WITH_USDT)
   find_package(USDT MODULE REQUIRED)
 endif()
 
+option(WITH_MDBX "Enable libmdbx for the coindsb." ON)
+if(WITH_MDBX)
+  add_subdirectory(src/libmdbx)
+  if(NOT TARGET mdbx-static)
+    message(FATAL_ERROR "libmdbx target not found")
+  endif()
+endif()
+
 cmake_dependent_option(ENABLE_EXTERNAL_SIGNER "Enable external signer support." ON "NOT WIN32" OFF)
 
 cmake_dependent_option(WITH_QRENCODE "Enable QR code support." ON "BUILD_GUI" OFF)
@@ -220,6 +228,7 @@ if(BUILD_FOR_FUZZING)
   set(BUILD_WALLET_TOOL OFF)
   set(BUILD_GUI OFF)
   set(ENABLE_EXTERNAL_SIGNER OFF)
+  set(WITH_MDBX OFF)
   set(WITH_ZMQ OFF)
   set(BUILD_TESTS OFF)
   set(BUILD_GUI_TESTS OFF)
@@ -602,6 +611,7 @@ message("  ZeroMQ .............................. ${WITH_ZMQ}")
 message("  USDT tracing ........................ ${WITH_USDT}")
 message("  QR code (GUI) ....................... ${WITH_QRENCODE}")
 message("  DBus (GUI, Linux only) .............. ${WITH_DBUS}")
+message("  libmdbx coinsdb        .............. ${WITH_MDBX}")
 message("Tests:")
 message("  test_bitcoin ........................ ${BUILD_TESTS}")
 message("  test_bitcoin-qt ..................... ${BUILD_GUI_TESTS}")
