--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -288,7 +288,7 @@ target_link_libraries(bitcoin_node
     core_interface
     bitcoin_common
     bitcoin_util
-    leveldb
+    rocksdb
     minisketch
     univalue
     Boost::headers
