--- a/src/kernel/CMakeLists.txt
+++ b/src/kernel/CMakeLists.txt
@@ -82,7 +82,7 @@ target_link_libraries(bitcoinkernel
     core_interface
     bitcoin_clientversion
     bitcoin_crypto
-    leveldb
+    rocksdb
     secp256k1
   PUBLIC
     Boost::headers
