--- a/src/qt/CMakeLists.txt
+++ b/src/qt/CMakeLists.txt
@@ -131,7 +131,7 @@ target_link_libraries(bitcoinqt
   PRIVATE
     core_interface
     bitcoin_cli
-    leveldb
+    rocksdb
     Boost::headers
     $<TARGET_NAME_IF_EXISTS:MiniUPnPc::MiniUPnPc>
     $<TARGET_NAME_IF_EXISTS:PkgConfig::libqrencode>
