--- a/src/test/fuzz/CMakeLists.txt
+++ b/src/test/fuzz/CMakeLists.txt
@@ -135,7 +135,7 @@ target_link_libraries(fuzz
   bitcoin_common
   bitcoin_util
   minisketch
-  leveldb
+  rocksdb
   univalue
   secp256k1
   Boost::headers
