--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,15 +9,15 @@ on:
 jobs:
   build-and-test:
     runs-on: [self-hosted, linux, x64]
-    timeout-minutes: 120
+    timeout-minutes: 20
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
       - uses: cachix/install-nix-action@v27
         with:
           nix_path: nixpkgs=channel:nixos-unstable
-      - name: Build release
+      - name: Build & test release
         env:
           NIX_PATH: nixpkgs=channel:nixos-unstable
         run: |
-          nix-shell --command "just build && just test"
+          nix-shell --command "just run-ci"
