--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,21 +23,21 @@ jobs:
       - name: Build & test release
         run: |
           nix-shell --command "just lint"
-  build-and-test:
-    needs: lint
-    runs-on: [self-hosted, linux, x64]
-    timeout-minutes: 20
-    env:
-      NIX_PATH: nixpkgs=channel:nixos-unstable
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
-      - uses: cachix/install-nix-action@v27
-        with:
-          nix_path: $NIX_PATH
-      - name: Build & test release
-        run: |
-          nix-shell --command "just run-ci"
+  # build-and-test:
+  #   needs: lint
+  #   runs-on: [self-hosted, linux, x64]
+  #   timeout-minutes: 20
+  #   env:
+  #     NIX_PATH: nixpkgs=channel:nixos-unstable
+  #   steps:
+  #     - name: Checkout repo
+  #       uses: actions/checkout@v4
+  #     - uses: cachix/install-nix-action@v27
+  #       with:
+  #         nix_path: $NIX_PATH
+  #     - name: Build & test release
+  #       run: |
+  #         nix-shell --command "just run-ci"
   assumeutxo-signet:
     needs: [lint, build-and-test]
     runs-on: [self-hosted, linux, x64]
