Record and upload flamegraph

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,3 +62,7 @@ jobs:
         with:
           name: result
           path: results.json
+      - uses: actions/upload-artifact@v4
+        with:
+          name: flamegraph
+          path: flamegraph.html
