--- a/.github/workflows/publish-results.yml
+++ b/.github/workflows/publish-results.yml
@@ -187,6 +187,7 @@ jobs:
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add results/
+          git add index.html
           git commit -m "Update benchmark results from run ${{ github.event.workflow_run.id }}"
           git push origin gh-pages
 
