--- a/hyperfine-config.json
+++ b/hyperfine-config.json
@@ -1,7 +1,7 @@
 {
-  "command": "build/src/bitcoind -datadir=$DATADIR -connect=148.251.128.115:55555 -daemon=0 -signet -stopatheight=170000",
+  "command": "build/src/bitcoind -datadir=$TMP_DATADIR -connect=148.251.128.115:55555 -daemon=0 -signet -stopatheight=170000",
   "parameter-list": [ ],
-  "prepare": "",
+  "prepare": "just prepare-assumeutxo-snapshot-run $TMP_DATADIR",
   "cleanup": "",
   "runs": 1,
   "show-output": true,
