fully erase datadir after run

--- a/hyperfine-config.json
+++ b/hyperfine-config.json
@@ -1,8 +1,9 @@
 {
   "command": "perf script flamegraph build/src/bitcoind -datadir=$TMP_DATADIR -connect=148.251.128.115:55555 -daemon=0 -signet -stopatheight=170000",
   "parameter-list": [ ],
-  "prepare": "[ -e last_commit.txt ] && LAST_COMMIT=$(cat last_commit.txt) || just prepare-assumeutxo-snapshot-run {commit} $TMP_DATADIR $UTXO_PATH && [ -e flamegraph.html ] && mv flamegraph.html ${LAST_COMMIT}-flamegraph.html || echo {commit} > last_commit.txt || true",
-  "cleanup": "[ -e flamegraph.html ] && mv flamegraph.html {commit}-flamegraph.html",
+  "setup": "just setup-assumeutxo-snapshot-run {commit} $TMP_DATADIR",
+  "prepare": "just prepare-assumeutxo-snapshot-run {commit} $TMP_DATADIR $UTXO_PATH",
+  "cleanup": "just cleanup-assumeutxo-snapshot-run $TMP_DATADIR",
   "runs": 1,
   "show-output": true
 }
